--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,26 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>app_name</title>
+  <title>FoodZoom</title>
   <meta name="description" content="">
-
   <meta name="viewport" content="width=device-width">
   <%= csrf_meta_tags %>
 
   <%= stylesheet_link_tag("application", :media => "all") %>
   <script src="/assets/modernizr-2.5.3.min.js"></script>
+  <%= stylesheet_link_tag    " https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js", :media => "all" %>
 </head>
 <body>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-
+		<div class="masthead container">
+			<div class="row">
+				<%= image_tag "logo.png" %>
+			</div>
+		</div>
   </header>
 
   <div role="main">
